--- a/closedverse_main/templates/closedverse_main/forgot_page.html
+++ b/closedverse_main/templates/closedverse_main/forgot_page.html
@@ -9,7 +9,7 @@
 				<h3 class="label"><label>E-mail address: <input type="email" class="auth-input" name="email" placeholder="Email" required></label></h3>				
 				{% csrf_token %}
 			<p class="red" style="margin-bottom:6px"></p>
-			<button type="submit" class="button">Do it</button>
+			<button type="submit" class="button">Submit</button>
 
 			
 			<div class="ll">
