--- a/closedverse_main/templates/closedverse_main/help/legal.html
+++ b/closedverse_main/templates/closedverse_main/help/legal.html
@@ -16,6 +16,7 @@
     </center>
     <pre style="white-space:pre-wrap;">
 This project is not, in any way, associated with Nintendo Co, Ltd. or Hatena Co, Ltd.
+Nintendo and Hatena have no involvement with this service, neither company maintains, endorses, sponsors or contributes to this. This is solely maintained, paid for, and created by Arian Kordi et al.
 Please do not C&amp;D me, let me know beforehand and I will attempt to solve an issue if there is one.
 
 If anything here infringes on your rights, please contact me:
@@ -26,11 +27,12 @@ or
 The specified content that does not belong to Arian Kordi, the owner, is:
 * The spinner "spinner-wandering-cubes" seen in Activity Feed loading, scrolling (Autopagerize), and admin management loading, which is owned and designed entirely by <em>Hammer & Chisel (Discord)</em>
 * The majority of the JavaScript, CSS and HTML files and the style of <em>Miiverse</em> is owned entirely by <em>Hatena Co, Ltd.</em> and <em>Nintendo Co, Ltd.</em>
+* The loading animation, originally taken from <em><a href="https://splatoon.nintendo.net/">SplatNet</a></em> and <em>Splatoon</em> by <em>Nintendo Co, Ltd.</em> and modified
 
 I will take this project and <a href="https://github.com/ariankordi/closedverse">its GitHub repository</a> down under any valid request.
 Thank you!
 
-<em>Revision 3, updated October 2 2017</em></pre>
+<em>Revision 4, updated October 21 2017</em></pre>
 
 	<center>
     	<h3>User content policy</h3>
