--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -46,7 +46,7 @@
 		<li>ClosedVerse</li>
 		<li>CV</li>
 		<li>Openverse</li>
-		<li>Miiverse/Miiverse 2.0</li>
+		<li>Miiverse, or Miiverse 2.0</li>
 		</ul>
 		<h3>What to call this</h3>
 		<ul>
