--- a/closedverse_main/templates/closedverse_main/man/admin-user-list.html
+++ b/closedverse_main/templates/closedverse_main/man/admin-user-list.html
@@ -1,5 +1,5 @@
 {% load closedverse_user %}{% load closedverse_tags %}<div class="list follow-list">
-  <ul class="list-content-with-icon-and-text arrow-list" id="user-man-list" data-next-page-url="{% if next %}?o={{ next }}{% endif %}">
+  <ul class="list-content-with-icon-and-text arrow-list" id="user-man-list" data-next-page-url="{% if next %}/users.html?o={{ next }}{% endif %}">
   {% for user in users %}
   <li class="trigger" data-href="{% url "main:user-view" user.username %}" data-action="{% url "main:user-manager" user.unique_id %}">
     {% user_icon_container user 0 %}
