--- a/static/blueness.css
+++ b/static/blueness.css
@@ -510,5 +510,7 @@ background: transparent;
 
 /*
 CodyMKW completely made this dark theme, please show him love.
-I might have made it better and actually suitable for mainstream use, but seriously, he made the entire thing at the beginning of the project and now it's here to stay.
+Seriously, he made the entire thing at the beginning of the project and now it's here to stay.
+I modified this to make it actually suitable for this, and completing the elements and such.
+oh also PF2M did some Find+Replace work to recolor the background, and then CodyMKW made the background again
 */
