--- a/closedverse_main/templates/closedverse_main/comment-view.html
+++ b/closedverse_main/templates/closedverse_main/comment-view.html
@@ -27,7 +27,10 @@
           <p class="user-name"><a href="{% url "main:user-view" comment.creator.username %}">{{ comment.creator.nickname }}</a></p>
           <p class="timestamp-container">
             <span class="spoiler-status{% if comment.spoils %} spoiler{% endif %}">Spoilers ·</span>
-            <span class="timestamp">{% time comment.created %}</span>          
+            <span class="timestamp">{% time comment.created %}</span>     
+				{% if comment.drawing %}
+				<span class="spoiler">(handwritten)</span>
+				{% endif %}			
 				{% if comment.has_edit %}
 		· <span class="spoiler">Edited ({% time comment.edited %})</span>
 				{% endif %}</p>
