--- a/closedverse_main/templates/closedverse_main/elements/discordapp-spinner.html
+++ b/closedverse_main/templates/closedverse_main/elements/discordapp-spinner.html
@@ -1,1 +1,1 @@
-<span class=spinner><span class="spinner-inner spinner-wandering-cubes"><span class=spinner-item></span><span class=spinner-item></span></span></span>
+<span class=spinner><span class="spinner-inner spinner-chasing-dots"><span class=spinner-item></span><span class=spinner-item></span></span></span>
