--- a/closedverse_main/templates/closedverse_main/elements/profile-post.html
+++ b/closedverse_main/templates/closedverse_main/elements/profile-post.html
@@ -9,10 +9,16 @@
           <p class="user-name"><a href="{% url "main:user-view" post.creator.username %}">{{ post.creator.nickname }}</a></p>
           
             <p class="timestamp-container">
-                {% if post.spoils %}
+				{% if post.spoils %}
 				<span class="spoiler">Spoilers</span>·
 				{% endif %}
+				{% if post.has_edit %}
+				<span class="spoiler">Edited ({% time post.edited %})</span>·
+				{% endif %}
               <a class="timestamp" {% if post.spoils and not post.is_mine %}data-href-hidden{% else %}href{% endif %}="{% url "main:post-view" post.id %}">{% time post.created %}</a>
+			  	{% if post.drawing %}
+				<span class="spoiler">(handwritten)</span>
+				{% endif %}
             </p>
 					{% if post.yt_vid %}
 					<a href="{% url "main:post-view" post.id %}" class="screenshot-container video"><img height="48" src="https://i.ytimg.com/vi/{{ post.yt_vid }}/default.jpg"></a>
