Opengraph and more stuff

--- a/closedverse_main/templates/closedverse_main/community_list.html
+++ b/closedverse_main/templates/closedverse_main/community_list.html
@@ -54,7 +54,7 @@
 			<a class="arrow-button" href="{% url "main:help-legal" %}"><span>Legal information</span></a>
 			<a class="arrow-button" href="{% url "main:help-contact" %}"><span>Contact information</span></a>
 			{% endif %}
-			<a class="arrow-button" href="https://www.pf2m.com/openverse/"><span>Info about Openverse</span></a>
+			<a class="arrow-button" href="https://pf2m.com/openverse/"><span>Info about Openverse</span></a>
 		</div>
 	</div>
 {% endblock %}
