--- a/closedverse_main/templates/closedverse_main/elements/memo-drawboard.html
+++ b/closedverse_main/templates/closedverse_main/elements/memo-drawboard.html
@@ -9,7 +9,7 @@
       <button type="button" class="artwork-pencil small selected"></button>
       <button type="button" class="artwork-eraser small"></button>
       <button type="button" class="artwork-fill"></button>
-      <button type="button" class="artwork-color black"></button>
+      <input type="text" class="artwork-color">
       <button type="button" class="artwork-zoom"></button>
       </div>
       <div class="memo-canvas">
