--- a/closedverse_main/templates/closedverse_main/help/contact.html
+++ b/closedverse_main/templates/closedverse_main/help/contact.html
@@ -11,7 +11,7 @@
 		<h2>Arian Kordi</h2>
 		<ul>
 		<li><a href="https://ariankordi.net/">ariankordi.net's homepage at the bottom</a></li>
-		<li>Discord: <b>ariankordi#5902</b></li>
+		<li>Discord: <s>ariankordi#5902</s> I lost access to my old one, new one is <b>Arian K.#9611</b></li>
 		<li>Email address: <a href="mailto:&#097;&#114;&#105;&#097;&#110;&#107;&#111;&#114;&#100;&#105;&#064;&#097;&#114;&#105;&#097;&#110;&#107;&#111;&#114;&#100;&#105;&#046;&#110;&#101;&#116;">ariankordi@ariankordi.net</a></li>
 		<li>My account's name here is probably <a href="{% url "main:user-view" "ariankordi" %}">ariankordi</a></li>
 		<li>Please bug PF2M with any Miiverse hacking questions, thanks</li>
