--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -24,6 +24,8 @@
 		<p>I can do that, but there's one catch: if you change your username, all of your content is still there, but the URL to your user page won't be the same. <br>So, I can do this, but not often. Just let me know what's up and I'll do it.</p>
 		<h2>I'm not getting emails when resetting my password.</h2>
 		<p>Sorry, I don't know what to do when that happens. Of course, you should check your spam folder, since I'm not using my own host and am using PF2M's because his is easier to manage.<br>Again, contact me/us.</p>
+		<h2>Are there any limits? Post limit, comment limit, friend limit, follow limit..</h2>
+		<p>The only limit that's here is a posting time limit, and it's the same as Miiverse's, its only purpose is to prevent spam. Other than that, there isn't a limit on friends you can have, and there isn't a limit on how many people you can follow.. yet. Keep in mind: limits are not just simply set, they have to actually be implemented. If there can be an amount of something, it probably isn't limited.</p>
 		<h2>How do I set a custom avatar?</h2>
 		<p>To do that, you need a Gravatar account. Gravatar lets sites automatically get an avatar from an e-mail address registered on Gravatar.<br>So, first, register for Gravatar on <a href="https://en.gravatar.com/">their site</a>. Yes, you need a WordPress account, but you might find more sites that use Gravatar.<br>After you have that set up, your avatar won't instantly update, you have to go into <a href="{% url "main:profile-settings" %}">Profile Settings</a> and select (or re-select) your avatar as a Gravatar, then actually that's it.<br>GIFs may or may not work. I'm not sure. I don't like them anyway, so yeah.</p>
 		<h2>How do I disable yeah notifs?</h2>
