Post limit and such

--- a/closedverse_main/templates/closedverse_main/community_list.html
+++ b/closedverse_main/templates/closedverse_main/community_list.html
@@ -48,6 +48,7 @@
 	</div>
 	<div id="community-guide-footer">
 		<div id="guide-menu">
+			<a class="arrow-button" href="{% url "main:help-why" %}"><span>Why join?</span></a>
 			<a class="arrow-button" href="{% url "main:help-rules" %}"><span>Closedverse Rules</span></a>
 			<a class="arrow-button" href="{% url "main:help-faq" %}"><span>Frequently Asked Questions (FAQ)</span></a>
 			{% if settings.PROD %}
