--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -29,6 +29,8 @@
 		<p>This is spam, unless it's legit. We'll let you know if you are doing this, and if you don't learn from any staff telling you to stop, you're not going to be able to yeah ;)<br>Yeah scripts are strictly forbidden. If you use one, prepare to die.</p>
 		<h2>Public Mii/Mii Police/12 accounts/impostoring popular Miiverse users</h2>
 		<p>You're not funny, and you won't have any mercy laid on yourself. You'll know if you're doing this.</p>
+		<h2>Childish avatars/names, deformed Miis</h2>
+		<p>Examples are stuff like setting your name to poop, booger, butt, etc. Un-tastefulness isn't welcome. If action is taken on you (like changing your avatar), you're expected to keep it. If you circumvent it once, you are prosecuted to the full extent of the law.</p>
 		<br>
 		<hr>
 		<h2>Repeals</h2>
@@ -54,6 +56,9 @@
 		<li>Closed</li>
 		</ul><br>
 		<p>If you do make any fanmade content for or about this, don't expect it to be alive, and be ready for it to be taken down by me only because I don't want that many stuff like that for this, and if I do then it'll be official and not user content.</p>
+		<br><br>
+		<h2>Wow, this is way too strict. I am dissatisfied.</h2>
+		<p>If you're unhappy with any of these rules, please keep in mind that <b>these rules are created for a reason</b> and are more of reminders. Admins do not strictly follow all of these. They're mostly here so that users can understand what type of person you should be here.<br>If you contact an admin in regards to a rule, they'll probably clarify it for you.</p>
       </div>
   </div>
 </div>
