--- a/closedverse_main/templates/closedverse_main/profile-settings.html
+++ b/closedverse_main/templates/closedverse_main/profile-settings.html
@@ -61,7 +61,7 @@
         <div class="center center-input">
 			<input type="text" name="external" maxlength="255" placeholder="DiscordTag" value="{{ profile.external }}">
 		</div>
-        <p class="note">Actually, you don't have to put a DiscordTag here, you can put anything here. Discord sure is popular though.</p>
+        <p class="note">Actually, you don't have to put a DiscordTag here, you can put anything here, such as your PlayStation Network account. Discord sure is popular though.</p>
       </li>
 	  	  {% if profile.origin_id %}
       <li>
