--- a/closedverse_main/templates/closedverse_main/help/why.html
+++ b/closedverse_main/templates/closedverse_main/help/why.html
@@ -41,6 +41,15 @@
 		<li>I'm committed. Don't think I'll not do anything about a problem, I'm always here. (unless I'm on vacation or something)</li>
 		</ul>
         
+		<h2>Can I use this on 3DS?!?!?!?</h2>
+		<p>I don't know. If you're talking about having it natively, <b>no.</b> The reason for this and everything else, why we don't have games support, is simple: <i>this is only meant to replicate the Miiverse side of Miiverse.</i> I mean that I have no intention at the moment to bring back any game compatibility, or porting this to the native 3DS/Wii U applications. I could do it with time, but I just do not feel like it.</p>
+		
+		<h2>What's the point? Why and how has humanity lead to this?</h2>
+		<p>Again, I myself am not really pushing this for anything. Again, this was made for fun, and the Miiverse community + users. Forums meant to replicate Miiverse are usually pretty terrible and not in the same format, and other social networks either have their kinks (Twitter, GAB, whatever else).</p>
+		
+		<h2>Lol no.</h2>
+		<p>If you don't want to join, sure! Nobody is pushing you to anything. If you wish to learn anything about how to make a basic forum-type application in Django, you could glance at my source and learn from it, or you could start learning Python's syntax in general.<br>As I've said again, you can just have this as a gateway, as you can put any profile you want here.</p>
+		
 		<h2>Who even are you?</h2>
 		<p>Probably the owner. I don't know, this is <a href="https://github.com/ariankordi/closedverse/blob/master/closedverse_main/templates/closedverse_main/help/why.html">hardcoded into the thing</a>.</p>
 		
