--- a/closedverse_main/templates/closedverse_main/forgot_reset.html
+++ b/closedverse_main/templates/closedverse_main/forgot_reset.html
@@ -4,7 +4,7 @@
     <div class="post-list-outline login-page">
         <form method="post">
 			<img src="{% static "img/menu-logo.png" %}">
-			<p class="lh">Reset password</p>
+			<p class="lh">{{ title }}</p>
 			<p>Welcome back! It appears you've got the email, and now it's time to reset your password.</p>
 				<h3 class="label"><label>New password: <input type="password" class="auth-input" name="password" placeholder="Password" required></label></h3>
 				<h3 class="label"><label>Confirm new password: <input type="password" class="auth-input" name="password_again" placeholder="Password again" required></label></h3>
