Making blocks work internally, kinda

--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -17,6 +17,7 @@
 		<meta property="og:title" content="{{ ogdata.title }} - Closedverse">
 		<meta property="og:type" content="article">
 		<meta property="og:url" content="{{ request.build_absolute_uri }}">
+		<meta property="og:image" content="{{ ogdata.image }}">
 		<meta property="og:description" content="{{ ogdata.description|truncatechars:150 }}">
 		<meta property="og:title" content="{{ ogdata.title }} - Closedverse">
 		<meta property="og:site_name" content="Closedverse">
