--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -56,6 +56,8 @@
 		<li>Closed</li>
 		</ul><br>
 		<p>If you do make any fanmade content for or about this, don't expect it to be alive, and be ready for it to be taken down by me only because I don't want that many stuff like that for this, and if I do then it'll be official and not user content.</p>
+		<h2>Annoying the devs</h2>
+		<p>Talking to a developer/admin by commening on their latest post is grounds for a ban. They have many things to do and you commenting on their latest (probably very popular) post is very very annoying, therefore, don't be surprised if you're banned for it. If it's relevant to the post (e.g., feature implementation, then asking about the feature), it's fine, but being totally irreleveant (e.g., asking why your post got deleted on a post having to do with skin) on purpose is a good ban reason.</p>
 		<br><br>
 		<h2>Wow, this is way too strict. I am dissatisfied.</h2>
 		<p>If you're unhappy with any of these rules, please keep in mind that <b>these rules are created for a reason</b> and are more of reminders. Admins do not strictly follow all of these. They're mostly here so that users can understand what type of person you should be here.<br>If you contact an admin in regards to a rule, they'll probably clarify it for you.</p>
